--- a/package.json
+++ b/package.json
@@ -11,19 +11,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "apexcharts": "^3.40.0",
+    "bootstrap": "^5.3.0-alpha3",
+    "ng-apexcharts": "^1.7.6",
+    "ngx-infinite-scroll": "^13.0.0",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.4",
+    "@angular-devkit/build-angular": "^13.3.11",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
