--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
+    "postinstall": "ng build --aot --prod",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
+  },
+  "engines": {
+    "node": "16.18.0",
+    "npm": "8.19.2"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +27,7 @@
     "@angular/router": "~13.1.0",
     "apexcharts": "^3.40.0",
     "bootstrap": "^5.3.0-alpha3",
+    "express": "^4.18.2",
     "ng-apexcharts": "^1.7.6",
     "ngx-infinite-scroll": "^13.0.0",
     "primeicons": "^5.0.0",
